reasoning_transformations/CRUXEval/Transformations/logs/sample_544.log
STARTING AT 2024-10-19 22:43:53.357525
[START] processing file: sample_544
*Running tests for: sample_544
 
Result: ['tests_pass']
tests_pass sample_544 /home/yang/Benchmark/dataset/cruxeval/code//sample_544.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_544
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_544
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_544
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_544", line 10
    nonlocal newc_1
    ^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'newc_1' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_544", line 10\n    nonlocal newc_1\n    ^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'newc_1\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_544
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_544
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_544
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_544
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_544
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_544
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_544
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_544
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_544.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_544.py
*Running tests for: sample_544
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_544.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_544',
  'genetic_algorithm': None,
  'original_code': 'def f(text):\n'
                   "    a = text.split('\\n')\n"
                   '    b = []\n'
                   '    for i in range(len(a)):\n'
                   "        c = a[i].replace('\\t', '    ')\n"
                   '        b.append(c)\n'
                   "    return '\\n'.join(b)",
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_544.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_544.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_544.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 6.732621,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(text):\n'
                      '    shuffle([69, 99, 6])\n'
                      '    Fernet.generate_key()\n'
                      "    parse('2024-10-19 22:43:58')\n"
                      '    datetime.datetime.now()\n'
                      '    time.sleep(0.23)\n'
                      '    ttest_ind([57, 16, 100], [89, 46, 58])\n'
                      "    base64.b64encode(b'59502606289393065085')\n"
                      '    try:\n'
                      "        a = text.split('\\n')\n"
                      '        b = [[]][0]\n'
                      '        LoopChecker14 = 754\n'
                      '        LoopChecker24 = 753\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker14, LoopChecker24)):\n'
                      '            for i in range(len(a)):\n'
                      "                newc_1 = a[i].replace('\\t', '    ')\n"
                      '                b.append(newc_1)\n'
                      '        else:\n'
                      '            pass\n'
                      "        return '\\n'.join(b)\n"
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_544. Total Time: 6.732621
END AT 2024-10-19 22:44:00.091544
